@@ -1,6 +1,6 @@
-Timings on Linux i486 33 MHz
-
 A.
+
+Timings on Linux i486 33 MHz
 
 N=100
 
@@ -34,13 +34,63 @@ Function            LiDIA/libI  LiDIA/cln     Pari       CLN-1996-11-17
  isqrt                                                  10.2
  gcd                                                   428
 
+Timings on Darwin PowerPC G4 1066 MHz
+
+N = 100
+
+Function            CLN-1.1.8   CLN-1.1.8
+                     no gmp     gmp-4.1.2
+ multiplication     0.0000069   0.0000066
+ division           0.0000047   0.0000047
+ isqrt              0.0000024   0.0000024
+ gcd                0.0000163   0.0000163
+
+N = 1000
+
+Function            CLN-1.1.8   CLN-1.1.8
+                     no gmp     gmp-4.1.2
+ multiplication     0.000197    0.000192
+ division           0.000179    0.000179
+ isqrt              0.000021    0.000021
+ gcd                0.000603    0.000600
+
+N = 10000
+
+Function            CLN-1.1.8   CLN-1.1.8
+                     no gmp     gmp-4.1.2
+ multiplication     0.0082      0.0081
+ division           0.0156      0.0155
+ isqrt              0.0009      0.0010
+ gcd                0.0449      0.0445
+
+N = 100000
+
+Function            CLN-1.1.8   CLN-1.1.8
+                     no gmp     gmp-4.1.2
+ multiplication     0.087       0.087
+ division           0.27        0.27
+ isqrt              0.132       0.133
+ gcd                3.28        3.26
+
+
 A'.
+
+Timings on Linux i486 33 MHz
+
                     LiDIA/libI  LiDIA/cln     Pari       CLN-1996-11-17
 N=100                                         0.2        0.07
 N=200                                         1.4        0.70
 N=1000                                      525        271
 
+Timings on Darwin PowerPC G4 1066 MHz
+
+Function            CLN-1.1.8   CLN-1.1.8
+                     no gmp     gmp-4.1.2
+N=1000              2.72        2.74
+
 B.
+
+Timings on Linux i486 33 MHz
 
 N=100
 
